--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
       border: 1px solid rgba(255,255,255,0.08);
       display:block;
     }
+    /* па змаўчанні (дэсктоп): паказваем img у modal-top */
+    .game-img-mobile{ display:none; }
+    .game-img-desktop{ display:block; }
+
 
     .modal-side{
       flex:1;
@@ -418,6 +422,10 @@
     /* ===== MOBILE ===== */
     @media (max-width: 980px){
       /* header: current project first */
+
+      .game-img-mobile{ display:block; }
+      .game-img-desktop{ display:none; }
+      
       .header-alignment{
         flex-direction: column;
         align-items: stretch;
@@ -571,17 +579,18 @@
 
   <!-- MODAL -->
   <div id="modal" class="modal" aria-hidden="true">
-    <div class="modal-content">
-      <!-- fixed close -->
-      <button class="modal-x" type="button" aria-label="Закрыць" onclick="closeModal()">×</button>
+   <div class="modal-content">
+  <button class="modal-x" type="button" aria-label="Закрыць" onclick="closeModal()">×</button>
 
-      <!-- cover full width on mobile (still ok on desktop) -->
-      <img id="modal-image" class="game-img" src="" alt="Game Image">
+  <!-- MOBILE cover (full-width) -->
+  <img id="modal-image-mobile" class="game-img game-img-mobile" src="" alt="Game Image">
 
-      <!-- padded content (mobile uses bigger padding via .modal-inner) -->
-      <div class="modal-inner">
-        <div class="modal-top">
-          <div class="modal-side">
+  <div class="modal-inner">
+    <div class="modal-top">
+      <!-- DESKTOP cover (як раней, у адной вертыкальнай зоне з загалоўкам) -->
+      <img id="modal-image" class="game-img game-img-desktop" src="" alt="Game Image">
+
+      <div class="modal-side">
             <div class="modal-main-row">
               <div class="modal-left">
                 <div class="modal-title-row">
@@ -845,6 +854,8 @@
 
       modalTitle.textContent = game.title;
       modalImage.src = game.cover;
+      const modalImageMobile = document.getElementById('modal-image-mobile');
+      if (modalImageMobile) modalImageMobile.src = game.cover;
       modalDescription.innerHTML = game.description || '';
 
       renderIcons(game.icons || []);
