--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>łokar</title>
+  <title>Łokar — Беларускія лакалізацыі</title>
+  <meta name="description" content="łokar — беларускія лакалізацыі, беларусізатары, пераклады гульняў. Спампаваць перакладаў, скрыншоты, аўтары. Stardew Valley, Valheim, Heroes 3, Mouthwashing і іншыя.">
+  <link rel="canonical" href="https://lokar.page/">
+  <meta name="keywords" content="беларуская лакалізацыя, пераклад гульняў, Stardew Valley, Valheim, Heroes 3, Mouthwashing, беларуская мова, беларусізатар">
+
+  <meta property="og:title" content="łokar — беларуская лакалізацыя гульняў">
+  <meta property="og:description" content="Спампоўванне перакладаў, скрыншоты, аўтары. Stardew Valley, Valheim, Heroes 3, Mouthwashing.">
+  <meta property="og:url" content="https://lokar.page/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://lokar.page/images/og.png">
+  <meta name="twitter:card" content="summary_large_image">
+
+
 
   <!-- Favicon -->
   <link rel="icon" href="/icons/favicon.svg" type="image/svg+xml">
@@ -542,8 +554,8 @@
       <div class="header-left">
         <h1 class="main-title">Пра нас</h1>
         <p class="subtitle">
-          Мы — каманда лакізатараў-энтузіастаў і проста аматараў якасных кампутарных гульняў.
-          Мы робім гульні больш даступнымі, і даём адчуць самы смак беларускай у вашых улюбленых праектах.
+          Мы — каманда лакізатараў-энтузіастаў і проста аматараў якасных камп’тарных гульняў.
+          З намі геймінг на роднай мове становіцца даступней, а вы зможаце адчуць самы смак беларускай у вашых улюблёных праектах.
         </p>
       </div>
 
@@ -636,7 +648,6 @@
         title: "Stardew Valley",
         cover: "images/stardewValley_img.png",
         cardPlatforms: "pc · android · клясычны і афіцыйны правапісы",
-        cardDescription: "Вы сталі спадкаемцам старой дзялянкі вашага дзеда ў даліне Стардзю. Узброіўшыся базавымі інструментамі і парай манет у кішэні, вы пачынаеце новае жыццё. Ці навучыцеся вы жыць з зямлі-карміліцы і ці стануць гэтыя зарослыя палі вашым новым квітучым домам?",
         description: "Вы сталі спадкаемцам старой дзялянкі вашага дзеда ў даліне Стардзю. Узброіўшыся базавымі інструментамі і парай манет у кішэні, вы пачынаеце новае жыццё. Ці навучыцеся вы жыць з зямлі-карміліцы і ці стануць гэтыя зарослыя палі вашым новым квітучым домам?",
         downloads: [
           { platform: "PC версія", links: [
@@ -667,7 +678,7 @@
           { alt: "Google Play", img: "images/icons/google-play-icon-svgrepo-com.svg", url: "https://play.google.com/store/apps/details?id=com.chucklefish.stardewvalley&hl=pl&pli=1"},
           { alt: "Xbox", img: "images/icons/xbox-svgrepo-com.svg", url :"https://www.xbox.com/pl-pl/games/store/stardew-valley/c3d891z6tnqm"}
         ],
-        meta: { developer: "ConcernedApe", genre: "Сімулятар / РПГ / Фэнтэзі", translators: "Ueschar, Dymniška, Cactusovič", words: "~178.000" }
+        meta: { developer: "ConcernedApe", genre: "Сімулятар / РПГ / Фэнтэзі", translators: "Міхалеў Аляксандр, Dymniška, Cactusovič", words: "~178.000" }
       },
 
       {
@@ -676,7 +687,6 @@
         title: "Mouthwashing",
         cover: "images/mouthwashing_img.png",
         cardPlatforms: "pc · афіцыйны правапіс",
-        cardDescription: "Экіпаж з пяцярых асоб на караблі «Тульпар» захрас у пустэльных прасторах космасу, ахутаны бясконцым змрокам.<br><br>І бог іх не пільнуе.",
         description: "Экіпаж з пяцярых асоб на караблі «Тульпар» захрас у пустэльных прасторах космасу, ахутаны бясконцым змрокам.<br><br>І бог іх не пільнуе.",
         downloads: [
           { platform: "PC версія", links: [
@@ -696,7 +706,7 @@
         icons: [
           { alt: "Steam", img: "images/icons/steam-svgrepo-com.svg", url: "https://store.steampowered.com/app/2475490/Mouthwashing/"}
         ],
-        meta: { developer: "Wrong Organ", genre: "Вар’яцтва / Жахі", translators: "Dymniška, Ueschar", words: "~6.000" }
+        meta: { developer: "Wrong Organ", genre: "Вар’яцтва / Жахі", translators: "Dymniška, Міхалеў Аляксандр", words: "~6.000" }
       },
 
       {
@@ -705,8 +715,7 @@
         title: "Heroes of Might & Magic 3",
         cover: "images/HOMM3_img.png",
         cardPlatforms: "pc · афіцыйны правапіс",
-        cardDescription: "Самая папулярная гульня серыі герояў усіх часоў! Адкрыйце для сябе эпічную гісторыю каралевы Кацярыны Жалезны Кулак, якая распачынае свой выўваляльны паход, каб аб’яднаць спустошаную радзіму і зноў адваяваць каралеўства Эрафію.",
-        description: "Самая папулярная гульня серыі герояў усіх часоў! Адкрыйце для сябе эпічную гісторыю каралевы Кацярыны Жалезны Кулак, якая распачынае свой выўваляльны паход, каб аб’яднаць спустошаную радзіму і зноў адваяваць каралеўства Эрафію.",
+        description: "Самая папулярная «геройская» гульня ўсіх часоў! Адкрыйце эпічную гісторыю каралевы Кацярыны Жалезны Кулак, якая распачынае вызваленчы паход, каб аб’яднаць спустошаную радзіму і зноў адрадзіць каралеўства Эрафію.",
         downloads: [
           { platform: "PC версія", links: [
             { text: "Сайт", url: "https://heroes.by-reservation.com/spampavac/" }
@@ -733,8 +742,7 @@
         title: "Valheim",
         cover: "images/valheim_img.png",
         cardPlatforms: "pc · афіцыйны правапіс",
-        cardDescription: "Жорсткая гульня пра даследаванне і выжыванне для 1–10 гульцоў, дзеянне якой адбываецца ў працэдурна згенераваным чыстцы, натхнёным культурай вікінгаў. Змагайся, будуй і заваёўвай — пракладай сабе шлях да сагі, годнай апекі Одына!",
-        description: "Жорсткая гульня пра даследаванне і выжыванне для 1–10 гульцоў, дзеянне якой адбываецца ў працэдурна згенераваным чыстцы, натхнёным культурай вікінгаў. Змагайся, будуй і заваёўвай — пракладай сабе шлях да сагі, годнай апекі Одына!",
+        description: "Хардкорная гульня для 1–10 гульцоў пра даследаванне і выжыванне, дзеянне якой адбываецца ў працэдурна згенераваным «чыстцы», натхнёным скандынаўскай міфалогіяй. Змагайцеся, будуйце і заваёўвайце — няхай пра вас напішуць сагу, годную славы Одзіна!",
         downloads: [
           { platform: "PC версія", links: [
             { text: "Nexus", url: "https://www.nexusmods.com/valheim/mods/3055" },
@@ -753,7 +761,7 @@
           { alt: "Steam", img: "images/icons/steam-svgrepo-com.svg", url: "https://store.steampowered.com/app/892970/Valheim/" },
           { alt: "Xbox", img: "images/icons/xbox-svgrepo-com.svg", url: "https://www.xbox.com/pl-pl/games/store/valheim-wyprobuj-gre/9ncbl78cg9n7"}
         ],
-        meta: { developer: "Iron Gate Studio", genre: "Survival / Open World", translators: "Ueschar, Dymniška, Данік. Kastuś", words: "~30.000" }
+        meta: { developer: "Iron Gate Studio", genre: "Survival / Open World", translators: "Міхалеў Аляксандр, Dymniška, Данік. Kastuś", words: "~30.000" }
       }
     ];
 
@@ -781,7 +789,7 @@
 
       const desc = document.createElement('p');
       desc.className = 'game-desc';
-      desc.innerHTML = game.cardDescription || '';
+      desc.innerHTML = game.description || '';
 
       info.appendChild(h2);
       info.appendChild(platforms);
