--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@
         title: "Stardew Valley",
         cover: "images/stardewValley_img.png",
         cardPlatforms: "pc · android · клясычны і афіцыйны правапісы",
+        cardDescription: "Вы сталі спадкаемцам старой дзялянкі вашага дзеда ў даліне Стардзю. Узброіўшыся базавымі інструментамі і парай манет у кішэні, вы пачынаеце новае жыццё...",
         description: "Вы сталі спадкаемцам старой дзялянкі вашага дзеда ў даліне Стардзю. Узброіўшыся базавымі інструментамі і парай манет у кішэні, вы пачынаеце новае жыццё. Ці навучыцеся вы жыць з зямлі-карміліцы і ці стануць гэтыя зарослыя палі вашым новым квітучым домам?",
         downloads: [
           { platform: "PC версія", links: [
@@ -678,7 +679,7 @@
           { alt: "Google Play", img: "images/icons/google-play-icon-svgrepo-com.svg", url: "https://play.google.com/store/apps/details?id=com.chucklefish.stardewvalley&hl=pl&pli=1"},
           { alt: "Xbox", img: "images/icons/xbox-svgrepo-com.svg", url :"https://www.xbox.com/pl-pl/games/store/stardew-valley/c3d891z6tnqm"}
         ],
-        meta: { developer: "ConcernedApe", genre: "Сімулятар / РПГ / Фэнтэзі", translators: "Міхалеў Аляксандр, Dymniška, Cactusovič", words: "~178.000" }
+        meta: { developer: "ConcernedApe", genre: "Сімулятар / РПГ / Фэнтэзі", translators: "Ueschar, Dymniška, Cactusovič", words: "~178.000" }
       },
 
       {
@@ -687,6 +688,7 @@
         title: "Mouthwashing",
         cover: "images/mouthwashing_img.png",
         cardPlatforms: "pc · афіцыйны правапіс",
+        cardDescription: "Экіпаж з пяцярых асоб на караблі «Тульпар» захрас у пустэльных прасторах космасу, ахутаны бясконцым змрокам...",
         description: "Экіпаж з пяцярых асоб на караблі «Тульпар» захрас у пустэльных прасторах космасу, ахутаны бясконцым змрокам.<br><br>І бог іх не пільнуе.",
         downloads: [
           { platform: "PC версія", links: [
