--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <button type="button" class="lang-item" data-lang="be" role="menuitem">BE — Беларуская</button>
           <button type="button" class="lang-item" data-lang="ru" role="menuitem">RU — Русский</button>
           <button type="button" class="lang-item" data-lang="en" role="menuitem">EN — English</button>
+          <button type="button" class="lang-item" data-lang="pl" role="menuitem">PL — Polski</button>
         </div>
       </div>
 
