--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- Favicon -->
-  <link rel="icon" href="/icons/favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="/icons/favicon-32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/icons/favicon.svg" sizes="any" type="image/svg+xml">
+  <link rel="icon" href="/icons/favicon-92.png" sizes="92x92" type="image/png">
   <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180">
   <link rel="manifest" href="/site.webmanifest">
   <meta name="theme-color" content="#111111">
